--- a/Designer/Interface/Data/DataElement.xaml
+++ b/Designer/Interface/Data/DataElement.xaml
@@ -3,7 +3,7 @@
 	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	  xmlns:Data="clr-namespace:NETPath.Interface.Data"
 	  xmlns:Docs="clr-namespace:NETPath.Interface.Documentation"
-	  xmlns:pc="http://schemas.propsectivesoftware.com/pc"
+	  xmlns:pc="http://schemas.ellipticbit.com/controls"
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 	  xmlns:sf="http://schemas.syncfusion.com/wpf"
