--- a/Designer/Interface/Dialogs/ReportError.xaml
+++ b/Designer/Interface/Dialogs/ReportError.xaml
@@ -1,7 +1,7 @@
 ﻿<Grid x:Class="NETPath.Interface.Dialogs.ReportError"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:pc="http://schemas.propsectivesoftware.com/pc"
+	xmlns:pc="http://schemas.ellipticbit.com/controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 	mc:Ignorable="d" d:DesignHeight="400" d:DesignWidth="1200" >
