--- a/Designer/Interface/Enum/Enum.xaml
+++ b/Designer/Interface/Enum/Enum.xaml
@@ -7,7 +7,7 @@
 	xmlns:Enum="clr-namespace:NETPath.Interface.Enum"
 	xmlns:Docs="clr-namespace:NETPath.Interface.Documentation"
 	xmlns:Projects="clr-namespace:NETPath.Projects;assembly=NETPath.Projects"
-	xmlns:pc="http://schemas.propsectivesoftware.com/pc"
+	xmlns:pc="http://schemas.ellipticbit.com/controls"
 	d:DesignHeight="950" d:DesignWidth="1000" DataContext="{Binding RelativeSource={RelativeSource Self}}" >
 	<Grid.Resources>
 		<ResourceDictionary>
