--- a/Designer/Interface/Host/Endpoint.xaml
+++ b/Designer/Interface/Host/Endpoint.xaml
@@ -3,7 +3,7 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d" 
-	xmlns:pc="clr-namespace:Prospective.Controls;assembly=Prospective.Controls"
+	xmlns:pc="http://schemas.ellipticbit.com/controls"
 	xmlns:sf="http://schemas.syncfusion.com/wpf"
 	xmlns:Host="clr-namespace:NETPath.Interface.Host"
 	xmlns:Projects="clr-namespace:NETPath.Projects;assembly=NETPath.Projects"
