--- a/Designer/Interface/Host/WebHTTPBehavior.xaml
+++ b/Designer/Interface/Host/WebHTTPBehavior.xaml
@@ -3,7 +3,7 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d" 
-	xmlns:pc="http://schemas.propsectivesoftware.com/pc"
+	xmlns:pc="http://schemas.ellipticbit.com/controls"
 	xmlns:Services="clr-namespace:NETPath.Interface.Service"
 	d:DesignHeight="400" d:DesignWidth="500" >
 	<Grid.Resources>
