--- a/Designer/Interface/Main.xaml
+++ b/Designer/Interface/Main.xaml
@@ -3,7 +3,7 @@
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-		xmlns:pc="http://schemas.propsectivesoftware.com/pc"
+		xmlns:pc="http://schemas.ellipticbit.com/controls"
 		xmlns:local="clr-namespace:NETPath.Interface"
 		xmlns:sf="http://schemas.syncfusion.com/wpf"
 		Icon="pack://application:,,,/NETPath;component/Icons/DesignStudio.ico" 
