--- a/Designer/Interface/Namespace/Namespace.xaml
+++ b/Designer/Interface/Namespace/Namespace.xaml
@@ -3,7 +3,7 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d" 
-	xmlns:pc="clr-namespace:Prospective.Controls;assembly=Prospective.Controls"
+	xmlns:pc="http://schemas.ellipticbit.com/controls"
 	xmlns:InRoot="clr-namespace:NETPath.Interface"
 	d:DesignHeight="800" d:DesignWidth="1000" DataContext="{Binding RelativeSource={RelativeSource Self}}" UseLayoutRounding="True" GotFocus="Grid_GotFocus" >
 	<Grid.Resources>
