--- a/Designer/Interface/Project/GenerationTarget.xaml
+++ b/Designer/Interface/Project/GenerationTarget.xaml
@@ -1,7 +1,7 @@
 ﻿<Grid x:Class="NETPath.Interface.Project.GenerationTarget" x:ClassModifier="internal"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:pc="http://schemas.propsectivesoftware.com/pc"
+		xmlns:pc="http://schemas.ellipticbit.com/controls"
 		xmlns:Project="clr-namespace:NETPath.Interface.Project"
 		MinWidth="875" DataContext="{Binding RelativeSource={RelativeSource Self}}" >
 	<Grid.Resources>
