--- a/Designer/Interface/Service/Service.xaml
+++ b/Designer/Interface/Service/Service.xaml
@@ -7,7 +7,7 @@
 	xmlns:Data="clr-namespace:NETPath.Interface.Data"
 	xmlns:Projects="clr-namespace:NETPath.Projects;assembly=NETPath.Projects"
 	xmlns:Docs="clr-namespace:NETPath.Interface.Documentation"
-	xmlns:pc="http://schemas.propsectivesoftware.com/pc"
+	xmlns:pc="http://schemas.ellipticbit.com/controls"
 	xmlns:sf="http://schemas.syncfusion.com/wpf"
 	d:DesignHeight="970" d:DesignWidth="1640" DataContext="{Binding RelativeSource={RelativeSource Self}}" UseLayoutRounding="True" >
 	<Grid.Resources>
