--- a/Designer/Themes/Extended.xaml
+++ b/Designer/Themes/Extended.xaml
@@ -2,9 +2,7 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:mwt="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
-	xmlns:pc="clr-namespace:Prospective.Controls;assembly=Prospective.Controls"
-	xmlns:pcd="clr-namespace:Prospective.Controls.Dialogs;assembly=Prospective.Controls"
-	xmlns:pce="clr-namespace:Prospective.Controls.Extensions;assembly=Prospective.Controls">
+	xmlns:pc="http://schemas.ellipticbit.com/controls">
 
 	<ResourceDictionary.MergedDictionaries>
 		<ResourceDictionary Source="pack://application:,,,/NETPath;component/Themes/Defaults.xaml"/>
@@ -58,8 +56,8 @@
 
 
 	<!-- Dialog Button -->
-	<pce:ToUppercaseValueConverter x:Key="ToUppercaseValueConverter" />
-	<Style x:Key="{x:Type pcd:DialogAction}" TargetType="{x:Type pcd:DialogAction}" >
+	<pc:ToUppercaseValueConverter x:Key="ToUppercaseValueConverter" />
+	<Style x:Key="{x:Type pc:DialogAction}" TargetType="{x:Type pc:DialogAction}" >
 		<Setter Property="Background" Value="{StaticResource DefaultBackgroundColor}" />
 		<Setter Property="BorderBrush" Value="Transparent" />
 		<Setter Property="Foreground" Value="{StaticResource DefaultFontColor}" />
