--- a/Designer/Interface/Main.xaml
+++ b/Designer/Interface/Main.xaml
@@ -1,15 +1,15 @@
 ﻿<Window x:Class="NETPath.Interface.Main" x:ClassModifier="internal"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-		xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:pc="http://schemas.ellipticbit.com/controls"
 		xmlns:local="clr-namespace:NETPath.Interface"
 		xmlns:sf="http://schemas.syncfusion.com/wpf"
-		Icon="pack://application:,,,/NETPath;component/Icons/DesignStudio.ico" 
+		Icon="pack://application:,,,/NETPath;component/Icons/DesignStudio.ico"
 		mc:Ignorable="d" d:DesignHeight="1040" d:DesignWidth="1980"
 		Title="NETPath" MinHeight="1040" MinWidth="1880" DataContext="{Binding RelativeSource={RelativeSource Self}}" Style="{StaticResource MainWindowStyle}"
-		SourceInitialized="Main_SourceInitialized" StateChanged="Main_StateChanged" Closing="Main_Closing" KeyUp="Main_KeyUp" >
+		SourceInitialized="Main_SourceInitialized" StateChanged="Main_StateChanged" Closing="Main_Closing" KeyUp="Main_KeyUp" SizeChanged="Main_OnSizeChanged" >
 	<WindowChrome.WindowChrome>
 		<WindowChrome CaptionHeight="34" ResizeBorderThickness="4" CornerRadius="0" GlassFrameThickness="0" UseAeroCaptionButtons="False" />
 	</WindowChrome.WindowChrome>
@@ -55,15 +55,15 @@
 								<Button Grid.Column="1" Command="{x:Static local:RecentProjectItem.FlagCommand}" CommandParameter="{Binding RelativeSource={RelativeSource TemplatedParent}}" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" >
 									<Image Source="{Binding Path=ItemFlag, Converter={StaticResource UriToBitmapImageConverter}, RelativeSource={RelativeSource TemplatedParent}}" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="32" Width="32" Stretch="Uniform"/>
 								</Button>
-							</Grid>					
+							</Grid>
 						</ControlTemplate>
 					</Setter.Value>
-				</Setter>					
+				</Setter>
 			</Style>
 		</ResourceDictionary>
 	</Window.Resources>
 	<Border x:Name="WindowBorder" BorderThickness="0" BorderBrush="{StaticResource WindowBorderColor}" Background="{StaticResource WindowBackground}" Margin="8">
-		<Grid>
+		<Grid Name="BaseGrid">
 			<Grid.RowDefinitions>
 				<RowDefinition Height="Auto" />
 				<RowDefinition Height="*" />
@@ -131,8 +131,8 @@
 									</Grid.ColumnDefinitions>
 									<Image Source="pack://application:,,,/NETPath;component/Icons/X64/Project.png" Margin="10,5" HorizontalAlignment="Left" VerticalAlignment="Top" UseLayoutRounding="True" Height="64" Width="64" Stretch="None" Grid.Column="0" />
 									<StackPanel Grid.Column="1" Margin="10">
-										<TextBlock Text="New WCF Project" Foreground="Gray" FontSize="14pt" FontWeight="Bold" Padding="0"/>
-										<TextBlock Text="Create new WCF project." Padding="0" TextWrapping="Wrap" FontSize="10pt" />
+										<TextBlock Text="New Project" Foreground="Gray" FontSize="14pt" FontWeight="Bold" Padding="0"/>
+										<TextBlock Text="Creates a new project." Padding="0" TextWrapping="Wrap" FontSize="10pt" />
 									</StackPanel>
 								</Grid>
 							</Button>
@@ -145,7 +145,7 @@
 									<Image Source="pack://application:,,,/NETPath;component/Icons/X64/Open.png" Margin="10,5" HorizontalAlignment="Left" VerticalAlignment="Top" UseLayoutRounding="True" Height="64" Width="64" Stretch="None" Grid.Column="0" />
 									<StackPanel Grid.Column="1" Margin="10">
 										<TextBlock Text="Open Project" Foreground="Gray" FontSize="14pt" FontWeight="Bold" Padding="0"/>
-										<TextBlock Text="Open an existing project from the disk." Padding="0" TextWrapping="Wrap" FontSize="10pt" />
+										<TextBlock Text="Opens an existing project." Padding="0" TextWrapping="Wrap" FontSize="10pt" />
 									</StackPanel>
 								</Grid>
 							</Button>
@@ -213,7 +213,7 @@
 								</Grid.RowDefinitions>
 								<TextBlock Text="About NETPath" Foreground="{StaticResource DefaultFontColor}" FontSize="18pt" Margin="0,0,0,10" Grid.Row="0"/>
 								<StackPanel Grid.Row="1" Margin="5,0">
-									<Image Name="SKULevel" Source="pack://application:,,,/NETPath;component/Icons/Odd/FullLogoDeveloper.png" Margin="0,0,0,10" HorizontalAlignment="Left" VerticalAlignment="Top" UseLayoutRounding="True" Height="150" Width="600" Stretch="None" Grid.Column="0" />
+									<Image Name="SKULevel" Source="pack://application:,,,/NETPath;component/Icons/Odd/FullLogoFOSS.png" Margin="0,0,0,10" HorizontalAlignment="Left" VerticalAlignment="Top" UseLayoutRounding="True" Height="150" Width="600" Stretch="None" Grid.Column="0" />
 									<Grid UseLayoutRounding="True" Margin="0,0,0,10">
 										<Grid.ColumnDefinitions>
 											<ColumnDefinition Width="*" />
@@ -224,17 +224,10 @@
 											<RowDefinition Height="Auto" />
 										</Grid.RowDefinitions>
 										<StackPanel Grid.Row="0">
-											<Label Content="Prospective Software NETPath Professional" Padding="4,0" Name="ProductTitle" />
+											<Label Content="NETPath Open-Source" Padding="4,0" Name="ProductTitle" />
 											<Label Name="AboutVersion" Content="Version: 1.0.0.0" Padding="4,0" />
-											<Label Content="Copyright © 2012-2014 Prospective Software Inc." Padding="4,0" />
+											<Label Content="Copyright © 2012-2015 Dr. Honda Inc." Padding="4,0" />
 											<Label Content="All Rights Reserved." Padding="4,0" />
-										</StackPanel>
-										<StackPanel Grid.Row="2">
-											<Label Content="Licensed To:" Foreground="DodgerBlue" Padding="4,0" />
-											<Label Content="{Binding Path=UserProfile.Serial}" Padding="4,0" />
-											<Label Content="{Binding Path=UserProfile.LicenseeName}" Padding="4,0" />
-											<Label Content="{Binding Path=UserProfile.UserName}" Padding="4,0" />
-											<CheckBox Content="Send anonymous usage statistics to Prospective Software" Padding="4" IsChecked="{Binding Path=UserProfile.IsUsageEnabled}" IsEnabled="{Binding Path=UserProfile.IsTrial, Converter={StaticResource NotBoolConverter}}" />
 										</StackPanel>
 									</Grid>
 									<Grid UseLayoutRounding="True" Margin="0,0,0,10">
@@ -248,12 +241,6 @@
 											<RowDefinition Height="Auto" />
 											<RowDefinition Height="Auto" />
 										</Grid.RowDefinitions>
-										<TextBlock Foreground="{StaticResource DefaultFontColor}" FontSize="9pt" Margin="0,5,0,5" Grid.Row="0" Padding="4,0">
-											Do you have a new idea or feature request that you would just love to see in NETPath? We'd love to hear from you:<LineBreak />
-											<Hyperlink Name="SLink" NavigateUri="http://support.prospectivesoftware.net/" RequestNavigate="SLink_RequestNavigate">
-												Prospective Software Feature Request and Issue Reporting Tool
-											</Hyperlink>
-										</TextBlock>
 										<TextBlock Text="Warning: This computer program is protected by copyright law and international treaties. Unauthorized reproduction or distribution of this program, or any portion of it, may result in severe civil and criminal penalties, and will be prosecuted to the maximum extent possible under the law." Foreground="{StaticResource DefaultFontColor}" FontSize="9pt" TextWrapping="Wrap" Padding="4,0" Grid.Row="1" />
 										<TextBlock Text="Microsoft Windows is a registered trademark of Microsoft Corporation in the United States and other countries." Foreground="{StaticResource DefaultFontColor}" FontSize="9pt" TextWrapping="Wrap" Padding="4,0" Margin="0,10,0,5" Grid.Row="2" />
 										<TextBlock Foreground="{StaticResource DefaultFontColor}" FontSize="9pt" TextWrapping="Wrap" Padding="4,0" Margin="0,10,0,5" Grid.Row="3">
@@ -267,8 +254,9 @@
 										</TextBlock>
 										<TextBlock Foreground="{StaticResource DefaultFontColor}" FontSize="9pt" TextWrapping="Wrap" Padding="4,0" Margin="0,10,0,5" Grid.Row="4" >
 											NETPath makes use of the follow open-source projects:<LineBreak/>
-											<Hyperlink NavigateUri="https://github.com/prospectivesoftware/netpathsdk/" RequestNavigate="Hyperlink_RequestNavigate">NETPath SDK</Hyperlink> Copyright © 2012-2014 Prospective Software<LineBreak />
-											<Hyperlink NavigateUri="https://github.com/prospectivesoftware/systemutilities/" RequestNavigate="Hyperlink_RequestNavigate">System.Utilities</Hyperlink> Copyright © 2012-2014 Prospective Software<LineBreak />
+											<Hyperlink NavigateUri="https://github.com/ellipticbit/netpathsdk/" RequestNavigate="Hyperlink_RequestNavigate">NETPath SDK</Hyperlink> Copyright © 2012-2015 Dr. Honda<LineBreak />
+											<Hyperlink NavigateUri="https://github.com/ellipticbit/systemutilities/" RequestNavigate="Hyperlink_RequestNavigate">System.Utilities</Hyperlink> Copyright © 2012-2015 Dr. Honda<LineBreak />
+											<Hyperlink NavigateUri="https://github.com/ellipticbit/controls/" RequestNavigate="Hyperlink_RequestNavigate">EllipticBit.Controls</Hyperlink> Copyright © 2012-2015 Dr. Honda<LineBreak />
 										</TextBlock>
 									</Grid>
 								</StackPanel>
